Home Page Sections - Hero Image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         
         <div class="expand">
-            <div class="col-0-of-3">
+            <div class="col-0-of-3" id="side-navigation">
                 <header class="header">
                     <div class="header__logo-box">
                         <img src="img/logo-green.gif" alt="Logo" class="header__logo">
